# llm-openwebui-private

./: .gitignore  README.md  docker-compose.yml
config/: open-webui.env.example
setup/: Dockerfile  pyproject.toml
setup/data/: models.json
setup/src/: main.py
setup/src/routers/: dashboard_api.py  pages.py  setup_api.py
setup/src/services/: compose_override.py  models_catalogue.py  ollama.py  state.py  webui.py
setup/src/templates/: base.html  dashboard.html
setup/src/templates/setup/: step1.html  step2.html  step3.html  step4.html
tests/integration/: test_api.py
tests/unit/: test_compose_override.py  test_state.py
